# taskapi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  database.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_main.py
.github/actions/setup/: action.yaml
.github/workflows/: pipeline.yaml  python-app.yml
src/taskapi/: db.py  main.py
src/taskapi/models/: task.py
src/taskapi/routes/: task.py
src/taskapi/tests/: test_main.py
