[project]
name = "taskapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "rupert", email = "jrgarscia@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.23",
]

[project.scripts]
taskapi = "taskapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
